--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
    <h1 style="color: white;">Object Detection Web app</h1>
 
    <br><br><br><br>
-   <a href = ""  class = "A" style = "color: white; font-size: 30px;">Clock </a>
+   <a href = "clock.html"  class = "A" style = "color: white; font-size: 30px;">Clock </a>
    <br><br><br><br><br><br>
    <a href = ""  class = "A" style = "color: white; font-size: 30px;">Tree </a>
    <br><br><br><br><br><br>
