--- a/home.html
+++ b/home.html
@@ -14,11 +14,11 @@
    <br><br><br><br>
    <a href = "clock.html"  class = "A" style = "color: white; font-size: 30px;">Clock </a>
    <br><br><br><br><br><br>
-   <a href = ""  class = "A" style = "color: white; font-size: 30px;">Tree </a>
+   <a href = "tree.html"  class = "A" style = "color: white; font-size: 30px;">Tree </a>
    <br><br><br><br><br><br>
-   <a href = ""  class = "A" style = "color: white; font-size: 30px;">Water bottle </a>
+   <a href = "waterbotel.html"  class = "A" style = "color: white; font-size: 30px;">Water bottle </a>
    <br><br><br><br><br><br>
-   <a href = ""  class = "A" style = "color: white; font-size: 30px;">Globe </a>
+   <a href = "globe.html"  class = "A" style = "color: white; font-size: 30px;">Globe </a>
 
 </center>
 
