--- a/tree.html
+++ b/tree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 
-    <link rel = "stylesheet" href = "clock.css">
+    <link rel = "stylesheet" href = "tree.css">
 
     <script src=" https://unpkg.com/ml5@latest/dist/ml5.min.js "></script>
 
@@ -14,18 +14,18 @@
 </head>
 
 <body style = "background-color: royalblue;">
-<title>Clock</title>
+<title>Tree</title>
 <center>
-<h1 style = "font-size: 30px; color: white;">Clock</h1>
+<h1 style = "font-size: 30px; color: white;">Tree</h1>
 <br>
 <br><br>
 <a href = "home.html" class = "btn btn-danger" >Back</a>
 <br><br><br><br>
 <h3 class = "btn btn-info" class="padding: 30px; font-size: 35px;">Status:<p id = "status"></p></h3>
 <br<br>
-<h3 class = "btn btn-danger">Out of 1 object COCO SSD is able to recognize 1</h3>
+<h3 class = "btn btn-danger">Out of 1 object COCO SSD is not able to recognize any objects</h3>
 </center>
-<script src = "clock.js"></script>
+<script src = "tree.js"></script>
 </body>
 
 </html>
